Fixed #26: now support wrap and nowrap tables by removing wrap and nowrap element style specifiers and putting the nowrap style in a class. The class can now be specified to the sdsstable.ps1 script, where it places it in the table tag. Found that 'wrap' specified in a class could not override 'nowrap' specified for the tag in the style sheet; however, the reverse seemed to work.

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ The above copyright notice and this permission notice shall be included in all c
 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 -->
 
-<style>
+<style type="text/css">
 table, td, th {
     border-color: LightGray;
     border-width: 1px;
@@ -20,8 +20,10 @@ table {
     border-collapse: collapse; 
 }
 th, td {
-	white-space: nowrap;
     margin: 0;
     padding: 4px;
+}
+.nowrap {
+    white-space: nowrap;
 }
 </style>
